# rust-bitbar

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/: release.sh
crate/bitbar/: Cargo.toml
crate/bitbar-derive/: Cargo.toml
crate/bitbar-derive/src/: lib.rs
crate/bitbar/src/: attr.rs  flavor.rs  lib.rs
crate/bitbar/src/flavor/: mod.rs  swiftbar.rs
crate/cargo-bitbar/: Cargo.toml
crate/cargo-bitbar/src/: main.rs
src/: lib.rs
