[package]
name = "bitbar"
version = "0.2.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
css-color-parser = "*"
url = "1"

[dependencies.base64]
version = "*"
optional = true

[dependencies.css-colors]
version = "1"
optional = true

[dependencies.image]
version = "*"
optional = true

[dependencies.serenity]
version = "*"
optional = true
default-features = false
features = ["utils"]
