[package]
name = "bitbar"
version = "0.3.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"
description = "Helper library for writing BitBar plugins"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fenhl/rust-bitbar"

[package.metadata.docs.rs]
all-features = true

[dependencies]
css-color-parser = "0.1.2"
url = "2"

[dependencies.base64]
version = "0.11"
optional = true

[dependencies.css-colors]
version = "1"
optional = true

[dependencies.image]
version = "0.22.2"
optional = true

[dependencies.serenity]
version = "0.7"
optional = true
default-features = false
features = [
    "model", "rustls_backend", #TODO remove once https://github.com/serenity-rs/serenity/issues/763 is fixed
    "utils"
]

[dependencies.url1]
package = "url"
version = "1"
optional = true
