[package]
name = "bitbar-derive"
version = "0.8.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"
description = "Proc-macros for the bitbar crate"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/fenhl/rust-bitbar"

[lib]
proc-macro = true

[features]
tokio = []

[dependencies]
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = ["full"]
