[package]
name = "bitbar-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Proc-macros for the bitbar crate"
license = "MIT"
readme = "../../README.md"
repository.workspace = true

[lib]
proc-macro = true

[features]
tokio = []

[dependencies]
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = ["full"]
