[package]
name = "bitbar-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Proc-macros for the bitbar crate"
license = "MIT"
readme = "../../README.md"
repository.workspace = true

[lib]
proc-macro = true

[features]
tokio = []

[dependencies]
itertools = "0.11"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "2"
features = ["full"]
