[package]
name = "bitbar"
version = "0.4.2"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"
description = "Helper library for writing BitBar plugins"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/fenhl/rust-bitbar"

[package.metadata.docs.rs]
features = ["base64", "css-colors", "image", "serenity", "tokio", "url1"]

[features]
default = ["tokio"]

[dependencies]
css-color-parser = "0.1.2"
inventory = "0.1" # used in proc macro
notify-rust = "3" # used in proc macro
structopt = "0.3" # used in proc macro
url = "2"

[dependencies.base64]
version = "0.11"
optional = true

[dependencies.bitbar-derive]
path = "../bitbar-derive"
version = "0.4"

[dependencies.css-colors]
version = "1"
optional = true

[dependencies.image]
version = "0.22.2"
optional = true

[dependencies.serenity]
version = "0.9"
default-features = false
features = [
    "model", "rustls_backend", #TODO remove once https://github.com/serenity-rs/serenity/issues/763 is fixed
    "utils"
]
optional = true

[dependencies.tokio] # used in proc macro
version = "0.3"
features = ["macros", "rt-multi-thread"]
optional = true

[dependencies.tokio02]
package = "tokio"
version = "0.2"
features = ["macros", "rt-threaded"]
optional = true

[dependencies.url1]
package = "url"
version = "1"
optional = true
