[package]
name = "bitbar"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Helper library for writing BitBar plugins"
license = "MIT"
readme = "../../README.md"
repository.workspace = true
keywords = ["plugin", "macos", "menu-bar", "swiftbar", "xbar"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["tokio"]
assume-flavor = ["static_assertions"]
tokio = ["dep:tokio", "futures", "bitbar-derive/tokio"]

[dependencies]
css-color-parser = "0.1.2"
if_chain = "1"
open = "5"
semver = "1"
thiserror = "1"
url = "2"

[dependencies.base64]
version = "0.21"
optional = true

[dependencies.bitbar-derive]
path = "../bitbar-derive"
version = "=0.10.1"

[dependencies.css-colors]
version = "1"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.image]
version = "0.24"
optional = true

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "model", "rustls_backend", #TODO remove once https://github.com/serenity-rs/serenity/issues/763 is fixed
    "utils"
]
optional = true

[dependencies.static_assertions]
version = "1"
optional = true

[dependencies.tokio] # used in proc macro
version = "1"
features = ["macros", "rt-multi-thread"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = "4"
