[package]
name = "cargo-bitbar"
version = "0.1.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"
description = "Cargo subcommand for the bitbar crate"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/fenhl/rust-bitbar"

[dependencies]
anyhow = "1"
base64 = "0.13"
cargo_metadata = "0.14"
itertools = "0.10"
paw = "1"
serde_json = "1"
serde_with = "1"
xattr = "0.2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.structopt]
version = "0.3"
features = ["paw"]
