[package]
name = "cargo-bitbar"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
description = "Cargo subcommand for the bitbar crate"
license = "MIT"
readme = "../../README.md"
repository.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.21"
cargo_metadata = "0.17"
itertools = "0.11"
serde_json = "1"
serde_with = "3"
xattr = "1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]
